Pass --add-opens to local-cluster executors in GlutenLocalBroadcastExchangeSuite
With the foreign Arrow leaks excluded, Gluten's bundled arrow-memory-unsafe
is now the allocator on the test classpath. The surefire driver JVM gets
--add-opens=java.base/java.nio via extraJavaTestArgs, but local-cluster
executors are separate processes launched by the in-process worker
(WorkerCommandBuilder) and never see those flags. Arrow's
MemoryUtil.<clinit> then fails with InaccessibleObjectException on JDK 17,
surfacing as ArrowBufferAllocators ExceptionInInitializerError on executor 1
in SPARK-39983.

Previously this was masked: the spark-hive leak put arrow-memory-netty
18.3.0 on the classpath, so CheckAllocator selected the netty allocator,
which does not need add-opens.

Set spark.executor.extraJavaOptions with the required opens for this
local-cluster suite. -XX:+IgnoreUnrecognizedVMOptions keeps it harmless on
Java 8/11.

Generated-by: kimi-k3
Co-authored-by: Cursor <cursoragent@cursor.com>